feat: new user functionality
